uf-15300: Fix failing test, hopefully